--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,11 @@
         </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="<<API_KEY HERE>>"/>
+            android:value="<<API KEY HERE>>"/>
     </application>
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 </manifest>
